This file documents the revision history for the Monitoring Webinterface Thruk.

1.42     not yet released
          - panorama view:
            - link service details to service list
            - update to extjs 4.1.1

1.40     Fri Aug  3 16:54:16 CEST 2012
          - change backends in config tool
          - use wait feature for acks/downtimes
          - change backends in config tool
          - panorama view:
            - added mine map panlet
            - added service details panlet
            - fixed problem with initial view
          - Bug Fixes
            - fixed reports when no state selected
            - fixed problem with cronjobs on pkg updates

1.38     Fri Jul 27 18:14:00 CEST 2012
          - added button to check/uncheck all columns for status excel export
          - panorama view:
            - added auto rotating tabs
            - added hosts / services panlet
            - added host / service totals panlet
            - added server metrics panlet
            - added filter for all host/services based panlets
            - generic url panlet can now show external urls
            - fixed generic url panlet when using css selector
          - Bug Fixes
            - fixed date verification in quick commands

1.36     Thu Jul 19 13:49:01 CEST 2012
          - added panorama view plugin
          - support flexible downtimes from the status page quick command
          - support recurring flexible downtimes
          - allow human readable values for duration filter like 5h or 10m
          - check version when using the check for updates link
          - clean up menu (don't show grid links in extra row)
          - allow wildcards in 'show_custom_vars'
          - added cgi sounds to tac page (if enabled)
          - added link for bug reports on internal errors (idea by the icinga team)
          - reporting:
            - reports can now be created for every page (html, xls, ...)
          - config tool: