@@ -3,6 +3,7 @@ This file documents the revision history for the Monitoring Webinterface Thruk.
 1.42     not yet released
           - panorama view:
             - link service details to service list
+            - show messages from send commands
             - update to extjs 4.1.1
 
 1.40     Fri Aug  3 16:54:16 CEST 2012
